app/styles/app.css
/* Styles for Release v0.3.0 */

/* Table of Contents */
/*  1. Colors */
/*  2. Options */
/*  3. Spacing - Note: b4 has resolved a lot of spacing issues. for this version we are utilizing the custom spacing rules from blockstack.com. Upon import of blockstack-bootstrap, go through styles and replace with latest spacing rules from b4. */
/*  4. Body */
/*  5. Links */
/*  6. Grid breakpoints */
/*  7. Grid containers */
/*  8. Grid columns */
/*  9. Fonts */
/* 10. Components */
/* 11. Tables */
/* 12. Buttons */
/* 13. Forms */
/* 14. Dropdowns */
/* 15. Z-index master list */
/* 16. Navbar */
/* 17. Navs */
/* 18. Pagination */
/* 19. Jumbotron */
/* 20. Form states and alerts */
/* 21. Cards */
/* 22. Tooltips */
/* 23. Popovers */
/* 24. Tags */
/* 25. Modals */
/* 26. Alerts */
/* 27. Progress bars */
/* 28. List group */
/* 29. Image thumbnails */
/* 30. Figures */
/* 31. Breadcrumbs */
/* 32. Media objects */
/* 33. Carousel */
/* 34. Close */
/* 35. Code */

#app{height:100%;width:100%;}

/* Custom styles */
.col-without-padding,.col-no-pad{padding:0 0 0 0;vertical-align:middle;}
body{font-family:'Lato',sans-serif;font-size:14px;background-color:rgba(250,250,250,1);}
.body-main{width:100%;height:100%;}
.body-landing{width:100%;height:100%;}
.body-inner{width:100%;min-height:100%;}
.body-inner-white{background-color:white;}
.wrapper{width:100%;}
.no-padding{padding-right:0;padding-left:0;}

/* Highlight */
.highlight{margin:0rem 0rem 1rem 0rem;padding:1rem 1rem 1rem 1rem;background-color:#eee;}
.highlight pre{margin-top:0;margin-bottom:0;padding:0;border:0;background-color:transparent;}
.capitalize{text-transform:capitalize;}

/* (Formerly Profile.css */

/* unknown styles //////////////////////////////////////// */
h4.headspace,h5.headspace{margin-bottom:50px;}
.pill-nav{font-size:16px;border:1px solid #484848;border-radius:20px;}
div.pill-nav > a{padding-right:15px;}
div.pill-nav > a > img{width:17px;height:17px;margin-top:-5px;margin-left:15px;}
div.container.outer-wrap{padding:0;}

/* end unknown styles ///////////////////////////////////// */
.bookmarks-temp{padding:0;border-radius:4px;}
.search-result{font-weight:300;display:block;height:60px;margin-bottom:1px;color:#fff!important;border:none;border-radius:3px;background-color:#2c96ff;}
a.search-result:hover{color:#fff!important;background-color:#2275d7;}
.result-img{width:36px;height:36px;}

/* Post rhythm ----------------------------------------- */

/* Globals */
html,body{min-width:768px;height:100%;background-color:#fff;}
button{outline:none!important;font-size:11px;}
.form-control:focus{color:#444;}

/* Type */
a,a:focus{outline:none;}
.inverse{font-weight:200;color:#fff;}

/* Update upon upgrade of v4 */
.btn-side-pull-left{margin-left:-25px!important;padding:8px 29px 8px 30px;}
.btn-primary,div.uploadcare-widget-button.uploadcare-widget-button-open{color:#fff;border-color:#080809;background-color:#080809;}
.btn-primary:hover,.btn-primary:focus,.btn-primary:active,.btn-primary.active,.open > .dropdown-toggle.btn-primary,div.uploadcare-widget-button.uploadcare-widget-button-open:hover,div.uploadcare-widget-button.uploadcare-widget-button-open:focus,div.uploadcare-widget-button.uploadcare-widget-button-open:active{color:#fff;border-color:#2275d7;background-color:#2275d7;}
.btn-primary.disabled,.btn-primary[disabled],fieldset[disabled] .btn-primary,.btn-primary.disabled:hover,.btn-primary[disabled]:hover,fieldset[disabled] .btn-primary:hover,.btn-primary.disabled:focus,.btn-primary[disabled]:focus,fieldset[disabled] .btn-primary:focus,.btn-primary.disabled:active,.btn-primary[disabled]:active,fieldset[disabled] .btn-primary:active,.btn-primary.disabled.active,.btn-primary[disabled].active,fieldset[disabled] .btn-primary.active{border-color:#494f56;background-color:#494f56;}
.btn-lg,.btn-group-lg > .btn{font-size:13px;font-style:normal;line-height:12px;padding:16px 50px;vertical-align:middle;border-radius:3px;}
.btn-sm,.btn-group-sm > .btn{font-size:11px;line-height:12px;padding:6px 10px;border-radius:2px;}

/* ID card */
.proid-wrap{width:870px;max-width:980px;}
.idcard{position:relative;border:.0625rem solid rgba(229,229,229,1);border-radius:.25rem;}
.idcard-body{display:block;margin-bottom:30px;color:#7b7b7b;}
.dim{color:#7b7b7b;}
.id-flex img, .id-flex .dropzone {bottom:0;width:16.25rem;height:371px;-webkit-border-radius:8px;border-radius:8px;object-fit:cover;}
.id-flex{bottom:0;display:table-cell;width:16.25rem;height:371px;vertical-align:top;}
.idcard-block{display:table-cell;width:100%;vertical-align:top;}
.idcard-name{font-size:1.25em;}
.id-social > div > ul{height:39px;margin-top:5px;margin-bottom:5px;margin-left:15px;list-style:none;}
.id-social > div > ul > li a{line-height:32px;overflow:hidden;height:32px;padding-left:10px;vertical-align:middle;white-space:nowrap;text-overflow:ellipsis;color:rgba(255,255,255,1);}
i.fa{display:inline-block;margin-top:3px;margin-right:5px;margin-left:5px;}
.id-social > div > ul > li a > span{padding-left:5px;}
.idcard-wrap{font-weight:inherit;margin-top:105px;color:#444;}
.overlay{position:absolute;width:16.25rem;height:371px;margin:-371px 0 0 0;-webkit-border-radius:8px;border-radius:8px;background-color:rgba(0,0,0,.2);}
.profile-container,profile-wrap{min-width:18.125rem;padding:.9375rem;}
.profile-right-col-fill{position:relative;top:50px;height:55vh;padding:0 0 0 10px;border-left:1px solid #e1e1e1;}
div.profile-right-col > ul{padding-left:0;list-style-type:none;}
div.profile-right-col > ul > li > a,div.profile-right-col > ul > li > button{display:block;padding:10px 5px;text-decoration:none;color:#949494;}
.btn-social-account{display:block;padding:10px 5px;text-decoration:none;color:#949494;}
div.profile-right-col > ul > li > a:hover,div.profile-right-col > ul > li > button:hover{text-decoration:none;color:#fff;border-radius:4px;background-color:#2c96ff;}
.btn-social-account:hover{text-decoration:none;border-radius:4px;background-color:#23262a;}
/* ... */

